--- a/Physics.Molecular/Physics.Molecular.csproj
+++ b/Physics.Molecular/Physics.Molecular.csproj
@@ -42,11 +42,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Enum\AtomType.cs" />
+    <Compile Include="Models\Atom.cs" />
+    <Compile Include="Models\Molecule.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
